examples/error/return_type_mismatch.rx
function string hello() {
  return [];
}

function void main() {
  print(hello());
}